4.0.3
-----
1. Fix restating LMS from 'Server settings' page.
2. Improve/fix album style queue for radio streams.
3. Don't group by release type if LMS is set to ignore this.

4.0.2
-----
 1. Respect LMS's setting to not group by release type.
 2. Add jumplist support when showing multiple release types.
 3. Don't highlight active jumplist item.
 4. Remove option for letter overlay whilst scrolling.
 5. Fix reading some LMS prefs where LMS returns '?'.
 6. Only request artist_ids when searching if LMS 8.4 or newer.
 7. Allow user-supplied backdrops, by placing into
    prefs/material-skin/backdrops
 8. Query LMS for release type names.
 9. Fix play button showing in mobile layout when no tracks in queue.
10. Remove link to user guide, its out of date.
11. Adjust volume with arrow keys, if control has focus.
12. 'Pulse' now-playing cover menu button if cover clicked.
13. Add native callback for titlebar and window control buttons, mainly for
    use in next version of Melodeon.
14. When using album style highlight all tracks of current album.
15. Clear queue selection when activate certain menu items.
16. Show menu buttons for tracks in browse and queue views when some are
    selected.
17. Remove hack to place 'Manage plugins' first in list, as LMS 8.4 now has a
    proper fix for this.
18. Fix browse toolbar if have selection.

4.0.1
-----
 1. Fix highlighting jumplist letter when jumping/scrolling lists.
 2. Re-add placing song info into window title.
 3. Move screensaver text every 5 minutes.
 4. Increase now-playing cover menu button opacity.
 5. Revert to previous String.replaceAll polyfill, fixes rendering issues.
 6. Fix text position when using thick mobile now-playing bar on iOS.
 7. Fix 'undefined' appearing in 'Artist' MAI section.
 8. Remember active MAI tab.
 9. Fix landscape now-playing ratings position.
10. Fix ratings display logic in desktop now-playing bar.
11. Fix issues where TrackStat is installed but RatingsLight is not.